Добавил семантическую разметку

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Обучение в Яндекс Практикум</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <section class="greetings">
+            <h1 class="greetings__title">Hello, it's my first markup!</h1>
+        </section>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
